--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -9,8 +9,13 @@ jobs:
         steps:
             - name: Checkout Code
               uses: actions/checkout@v4
-            - name: Print folders
-              run: ls 
+            - name: Setup Node
+              uses: actions/setup-node@v4
+              with: 
+                  node-version: '20.x'
+            - name: Install dependencies
+              run: npm ci
+                      
 
 
    
