--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -15,7 +15,8 @@ jobs:
                   node-version: '20.x'
             - name: Install dependencies
               run: npm ci
-                      
+              working-directory: 04-using-actions/react-app
+
 
 
    
