--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -3,19 +3,24 @@ on: push
 jobs:
     build:
         runs-on: ubuntu-latest
-        # 0. checkout the code from the repo
-        # 1. Install dependencies of our react app
+        defaults: 
+            run: 
+                working-directory: 04-using-actions/react-app
         # 2. Execute automated tests 
         steps:
+            # 0. checkout the code from the repo
             - name: Checkout Code
               uses: actions/checkout@v4
+            # 1. Install dependencies of our react app
             - name: Setup Node
               uses: actions/setup-node@v4
               with: 
                   node-version: '20.x'
             - name: Install dependencies
               run: npm ci
-              working-directory: 04-using-actions/react-app
+            - name: Run Unit Tests
+              run: npm run test
+
 
 
 
