--- a/.github/workflows/02-workflow-events.yaml
+++ b/.github/workflows/02-workflow-events.yaml
@@ -2,7 +2,7 @@ name: 02 - Workflow Events
 on: 
   workflow_dispatch:
   #push:
-  pull_request:
+  #pull_request:
   # schedule:
   #  - cron: '*/5 * * * *'
 jobs:
