--- a/.github/workflows/08-variables.yaml
+++ b/.github/workflows/08-variables.yaml
@@ -2,6 +2,7 @@ name: 08 - Using Variables
 env:
   WORKFLOW_VAR: 'I am a workflow env var'
   OVERWRITTEN: 'I will be overwritten'
+  UNDEFINED_VAR_WITH_DEFAULT: ${{vars.UNDEFINED_VAR || 'default value'}}
 on: 
   push:
   workflow_dispatch:
@@ -27,3 +28,29 @@ jobs:
           OVERWRITTEN: 'I have been overwritten at the step level'
         run: | 
           echo "Step env var: ${{env.OVERWRITTEN}}"
+  echo2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print variables
+        run: |
+          echo "Org var: ${{vars.ORG_VAR}}"
+          echo "Org Overwritten var: ${{vars.OVERWRITTEN_VAR}}"
+          echo "Repo var: ${{vars.REPOSITORY_VAR}}"
+  echo-prod:
+    runs-on: ubuntu-latest
+    environment: prod
+    steps: 
+      - name: Print Prod variables
+        run: |
+          echo "Org var: ${{vars.ORG_VAR}}"
+          echo "Org Overwritten var: ${{vars.OVERWRITTEN_VAR}}"
+          echo "Repo var: ${{vars.REPOSITORY_VAR}}"
+          echo "Environment var: ${{vars.TARGET_VAR}}"
+  echo-undefined:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print undefined variables
+        run: |
+          echo "Org var: ${{env.UNDEFINED_VAR_WITH_DEFAULT}}"
+
+
